Fix many spacings in homepage

--- a/src/assets/styles/components/_footer.scss
+++ b/src/assets/styles/components/_footer.scss
@@ -1,10 +1,6 @@
 .footer {
-	@include mq-down(lg) {
-		border: none;
-	}
-
 	&--content {
-		padding: 144px 0px 144px 0px;
+		padding: 120px 0px;
 
 		@include mq-down(lg) {
 			padding: 64px 16px;
