--- a/src/assets/styles/components/home/_introduction.scss
+++ b/src/assets/styles/components/home/_introduction.scss
@@ -1,10 +1,6 @@
 .introduction {
-	@include mq-down(lg) {
-		border-width: 0px 0px 1px 0px;
-	}
-
 	&--content {
-		margin-top: 144px;
+		margin: 144px 0px;
 
 		.headline {
 			@include mq-down(lg) {
@@ -14,58 +10,6 @@
 
 		@include mq-down(lg) {
 			margin-top: 64px;
-		}
-
-		.header-illustration {
-			margin-top: 44px;
-			overflow: hidden;
-			width: 100%;
-			height: 395px;
-
-			@include mq-down(lg) {
-				margin-top: 44px;
-			}
-
-			svg {
-				left: -12px;
-				position: relative;
-
-				@include mq-down(lg) {
-					left: -15%;
-				}
-
-				@include mq-down(sm) {
-					left: -85%;
-				}
-
-				.stroke-default {
-					stroke-width: 1.5;
-				}
-
-				.line-black {
-					stroke: var(--text-primary);
-				}
-
-				.fill-black {
-					fill: var(--text-primary);
-				}
-
-				.fill-white {
-					fill: var(--background-default);
-				}
-
-				.fill-gray-1 {
-					fill: var(--border-default);
-				}
-
-				.fill-gray-2 {
-					fill: var(--surface-default);
-				}
-
-				.fill-gray-3 {
-					fill: var(--border-default);
-				}
-			}
 		}
 	}
 
