--- a/src/assets/styles/components/home/_selected-work.scss
+++ b/src/assets/styles/components/home/_selected-work.scss
@@ -1,24 +1,12 @@
 .selected-work {
-	@include mq-down(lg) {
-		border-width: 0px 0px 1px 0px;
-	}
+	margin: 0px 0px 80px 0px;
 
 	&--content {
-		margin: 144px 0px 144px 0px;
-
 		h2 {
 			margin: 0px 0px 44px 0px;
 
 			@include mq-down(lg) {
 				margin: 0px 16px 44px 16px;
-			}
-		}
-
-		p {
-			margin-bottom: 24px;
-
-			@include mq-down(sm) {
-				margin-bottom: 12px;
 			}
 		}
 
