--- a/src/assets/styles/components/home/_skills.scss
+++ b/src/assets/styles/components/home/_skills.scss
@@ -1,13 +1,9 @@
 .skills {
-	@include mq-down(lg) {
-		border-width: 0px 0px 1px 0px;
-	}
+	margin: 0px 0px 80px 0px;
 
 	&--content {
-		margin: 144px 0px 144px 0px;
-
 		.title {
-			margin: 0px 0px 64px 0px;
+			margin: 0px 0px 40px 0px;
 
 			@include mq-down(lg) {
 				margin: 0px 16px 44px 16px;
